resources/services/backstage/stage/backstage.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-devshiftnet-dns
  labels:
    service: backstage
  name: backstage
spec:
  host: backstage.stage.devshift.net
  to:
    kind: Service
    name: backstage
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
